--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,8 +1,10 @@
-quantus
-torch>=1.10.1
 captum>=0.4.1
+coverage>=6.2
 black==22.10.0
 pandas==1.5.2
+torch>=1.10.1
+torchvision>=0.11.2
 pytest>=6.2.5
 pytest-cov>=3.0.0
 pytest-lazy-fixture>=0.6.3
+quantus>=0.3.1
