--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Test
         run: |
           pip install -r requirements_test.txt
-          pytest tests -v --cov-report term --cov-report html:htmlcov --cov-report xml --cov=quantus
+          pytest tests -v --cov-report term --cov-report html:htmlcov --cov-report xml --cov=metaquantus
       - name: Upload
         uses:  codecov/codecov-action@v3
         with:
