--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,7 @@
 [pytest]
 markers =
-    master: master tests.
+    metaevaluation: metaevaluation tests.
     benchmarking: benchmarking tests.
-    utils: utils tests.
-
 
 filterwarnings =
     error
