fixes tests, meta_eval running

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
-    metaevaluation: metaevaluation tests.
+    meta_evaluation: metaevaluation tests.
     benchmarking: benchmarking tests.
 
 filterwarnings =
