--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,7 +1,8 @@
 captum>=0.4.1
 coverage>=6.2
 black==22.10.0
-pandas==1.5.2
+numpy>=1.20.3
+pandas>=1.5.3
 torch>=1.10.1
 torchvision>=0.11.2
 pytest>=6.2.5
