--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -2,7 +2,7 @@ captum>=0.4.1
 coverage>=6.2
 black==22.10.0
 numpy>=1.20.3
-pandas>=1.3.5
+pandas
 torch>=1.13.1
 torchvision>=0.14.1
 pytest>=6.2.5
