--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -5,7 +5,7 @@ numpy>=1.20.3
 torch>=1.13.1
 torchvision>=0.14.1
 quantus>=0.3.2
-pandas
+pandas>=1.3.5
 pytest>=6.2.5
 pytest-cov>=3.0.0
 pytest-lazy-fixture>=0.6.3
