--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,12 +1,7 @@
-captum>=0.4.1
-coverage>=6.2
+-r requirements.txt
+coverage>=7.2.3
 black==22.10.0
 numpy>=1.20.3
-timm>=0.6.12
-torch>=1.10.1
-torchvision>=0.11.2
-quantus>=0.3.2
-pandas>=1.3.5
 pytest>=6.2.5
 pytest-cov>=3.0.0
 pytest-lazy-fixture>=0.6.3
