--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,4 +43,5 @@ jobs:
         black metaquantus
     - name: Test with pytest
       run: |
+        export PYTHONPATH=${PYTHONPATH}:.
         pytest
