--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ timm>=0.6.12
 torch>=2.0.0
 torchvision>=0.15.1
 pandas>=1.3.5
-git+https://github.com/understandable-machine-intelligence-lab/Quantus.git # latest Quantus update
+git+https://github.com/understandable-machine-intelligence-lab/Quantus.git 
